--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch": "grunt watch",
     "dev": "grunt dev",
     "dist": "grunt dist",
-    "test": "mocha tests/test-sass.js"
+    "test": "mocha tests/test-sass.js --reporter mocha-junit-reporter --reporter-options mochaFile=./surefire-reports/test-results.xml"
   },
   "author": "Alex R Chies (alejandrorodriguez@stratio.com)",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.11.2",
     "mocha": "^2.3.3",
+    "mocha-junit-reporter": "1.11.1",
     "pre-commit": "^1.1.2",
     "sass-true": "^2.0.2",
     "time-grunt": "^1.2.1"
